Fix sys-inv card tooltip, also fix text spacing, update deps (#167)
fixes https://projects.engineering.redhat.com/browse/RHCLOUD-8080

--- a/src/PresentationalComponents/NumberData/NumberData.scss
+++ b/src/PresentationalComponents/NumberData/NumberData.scss
@@ -41,7 +41,7 @@
 
     span {
         display: inline-block;
-        max-width: 80%;
+        max-width: 85%;
         margin-right: var(--pf-global--spacer--sm);
         overflow: hidden;
         text-overflow: ellipsis;
