--- a/src/PresentationalComponents/NumberDescription/NumberDescription.scss
+++ b/src/PresentationalComponents/NumberDescription/NumberDescription.scss
@@ -11,28 +11,6 @@
         text-overflow: ellipsis;
         line-height: var(--pf-global--FontSize--sm);
         text-align: left;
-
-        > .pf-c-button__text {
-            display: flex;
-            flex-direction: column;
-            align-items: baseline;
-            min-width: 0;
-            max-width: 100%;
-        }
-    }
-
-    &.pf-m-horizontal {
-        svg {
-            margin-right: var(--pf-global--spacer--sm);
-        }
-
-        .pf-c-button.pf-m-link .pf-c-button__text {
-            flex-direction: row;
-
-            > :first-child {
-                padding-right: var(--pf-global--spacer--sm);
-            }
-        }
     }
 }
 
