--- a/src/SmartComponents/SystemInventory/SystemInventoryCard.scss
+++ b/src/SmartComponents/SystemInventory/SystemInventoryCard.scss
@@ -4,3 +4,6 @@
         cursor: default;
     }
 }
+.dashboard-card-system-inventory-body {
+    max-width: 400px;
+}
